--- a/1/Web projekt Selmin & Ereza/TestPage/loginStyle.css
+++ b/1/Web projekt Selmin & Ereza/TestPage/loginStyle.css
@@ -69,7 +69,7 @@ nav ul li{
     display: inline-block;
     margin-right: 25px;
     font-family: Century Gothic;
-    
+    color: #E6E6E6;
 }
 
 
