--- a/1/Web projekt Selmin & Ereza/Website Selmin Ereza/css/style.css
+++ b/1/Web projekt Selmin & Ereza/Website Selmin Ereza/css/style.css
@@ -9,7 +9,7 @@ body{
     flex-direction: column;
     justify-content: space-evenly;
     font-family:Century Gothic;
-    background-color: #E6E6E6;
+    background-color: #FFF;
     
 }
 /*---------------------------------------------------------------------*/
@@ -36,7 +36,7 @@ nav ul li{
 }
 a{
     text-decoration:none;
-    color:#E6E6E6;
+    color:#FFF;
 }
 
 .container{
@@ -59,28 +59,34 @@ a{
 header{
     background-color: #14279B;
 }
-.container a:hover{
+.container img:hover{
     transform: scale(1.15);
     transition: 0.1s;
+    
 }
 nav ul li:hover{
     transform: scale(1.1);
     transition: 0.1s;
 }
+.container .logo img {
+    transform:scale(1)
+}
 
 /*SLIDER---------------------------------------------------------------------*/
-.image{
-    background-image: url(/TestPage/Img/banner.jpg);
-    background-color: #cccccc;
+
+header .image {
+    background-image: url("../Img/banner.jpg");
     height: 300px;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-.search >input[type=text], input::placeholder{
+  }
+
+.image .search input[type=text], input::placeholder{
     height: 50px;
     width: 400px;
     cursor: pointer;
@@ -97,9 +103,7 @@ nav ul li:hover{
     transition: all 250ms ease-in-out;
     backface-visibility: hidden;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0,0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
 }
-
 
 
 
@@ -126,7 +130,7 @@ main{
     color: #14279B;
 }
 .bestseller h2 span {
-    background:#E6E6E6; 
+    background:#FFF; 
     padding:0 10px; 
 }
 .products{
@@ -150,7 +154,7 @@ main{
     justify-content: space-evenly;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0,0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
     text-align: left;
-    background-color: aliceblue;
+    background-color: #FFF;
 }
 
 .productblock:hover{
@@ -196,7 +200,7 @@ main{
 
 }
 .price #submit{
-    color: #E6E6E6;
+    color: #FFF;
     border-radius: 50px;
     width:100px;
     height:30px;
@@ -206,7 +210,7 @@ main{
     border:none;
 }
 .price .buttons img{
-    color: #E6E6E6;
+    color: #FFF;
     border-radius: 50px;
     width: 30px;
     height:30px;
@@ -237,7 +241,7 @@ main{
     color: #14279B;
 }
 .comingMain h2 span {
-    background:#E6E6E6; 
+    background:#FFF; 
     padding:0 10px; 
 }
 .comingBlock:hover{
@@ -259,7 +263,7 @@ main{
     height: 600px;
     justify-content: flex-start;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0,0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
-    background-color: aliceblue;
+    background-color: #FFF;
     margin:20px;
     
 }
@@ -325,7 +329,7 @@ main{
     color: #14279B;
 }
 .reviews h2 span {
-    background:#E6E6E6; 
+    background:#FFF; 
     padding:0 10px; 
 }
 .reviewsBlock{
@@ -347,7 +351,7 @@ main{
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0,0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
     padding-bottom:25px ;
-    background-color: aliceblue;
+    background-color: #FFF;
     /*border: solid red 1px;*/
     margin:20px;
 
@@ -374,12 +378,11 @@ main{
     margin:0 auto;
     margin-top: 25px;
     margin-bottom: 25px;
-    background-color:aliceblue ;
+    background-color:#FFF ;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0,0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
-    
 }
 .newsText{
-    border: solid 1px red;
+   /* border: solid 1px red;*/
     display: flex;
     flex-direction:column;
     justify-content: center;
@@ -395,7 +398,7 @@ main{
     width: 50%;
 }
 .newsSearch > #textbox{
-    width: 50%;
+    width: 400px;
     height: 30px;
     
 }
@@ -461,14 +464,12 @@ footer ul li{
 
 /*------------------------RESPONSIVE------------------------*/
 @media only screen and (min-width:1251px) {
-    header .container .menuIcon{
+    .navbar .menuIcon{
         width: 28px;
         margin-right:25px;
-        display: none;
+        display:none;
     }
 }
-
-
 
 @media only screen and (max-width:1250px) {
     .navbar{
