Fixed About Us Page

--- a/Pjesa2/css/aboutStyle.css
+++ b/Pjesa2/css/aboutStyle.css
@@ -27,8 +27,8 @@ main h1{
  max-width: 70%;
 }
 
-.text{
- /*border: solid red 1px;*/
+main > .text{
+border: solid red 1px;
 
 display: flex;
 flex-direction: column;
