--- a/Pjesa2/css/slider.css
+++ b/Pjesa2/css/slider.css
@@ -22,17 +22,16 @@
 .buttons label {
     width: 50px;
     height: 30px;
-    background-color: #555;
+    background-color: #14279B;
     border-radius: 15px;
 }
 .sliderImages{
-    width: 100%;
-    height: 100%;
+    width: 300%;
+    
     
 }
 .sliderImages img{
     width: 33.33333%;
-    height: 100%;
     transition: 1s;
 }
 .navbar{
