--- a/Pjesa2/css/addProduct.css
+++ b/Pjesa2/css/addProduct.css
@@ -24,7 +24,7 @@
     width: 70%;
     height: 500px;
     padding: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0,0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
+    
 
 }
 .cont1{
@@ -34,15 +34,23 @@
    align-items: center;
    padding:50px;
 }
-.cont1 input{
+.cont1 form input {
     width: 350px;
     height:40px;
     border-radius: 5px;
     border: solid black 1px;
+    
     background-color: #FFF;
     font-size: 20px;
     color: #000;
 } 
+.cont1 #addProd {
+    background-color: #14279B;
+    color: #FFF;
+}
+form input{
+    margin:10px;
+}
 /*------------------------------------------*/
 *{
     margin: 0;
