--- a/Pjesa2/css/style.css
+++ b/Pjesa2/css/style.css
@@ -48,7 +48,7 @@ a{
     padding-left: 25px;
     padding-right: 25px;
     background-color: #14279B;
-    border: solid red 1px;
+    /*border: solid red 1px;*/
     
 }
 .container img{
