--- a/Pjesa2/css/style.css
+++ b/Pjesa2/css/style.css
@@ -137,11 +137,17 @@ main{
     background:#FFF; 
     padding:0 10px; 
 }
+.productCont{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 .products{
     display: flex;
-    flex-wrap:wrap;
-    /*border: solid red 3px;*/
+    flex-wrap: wrap;
     justify-content: center;
+    /*border: solid red 3px;*/
+    
     
 }
 
