Login and fixes

--- a/Pjesa2/css/style.css
+++ b/Pjesa2/css/style.css
@@ -9,23 +9,27 @@ body{
     flex-direction: column;
     justify-content: space-evenly;
     font-family:Century Gothic;
-    background-color: #FFF;
+    background-color: rgb(228, 228, 228);
     
+}
+.hide{
+    display:none;
 }
 /*---------------------------------------------------------------------*/
 .navbar{
     display:flex;
     align-items:center;
     height: 50px;
-    width: 100vw;
+    width: 80%;
     
     
 }
 
 nav{
+
     flex:1;
     text-align: center;
-    max-width: 100%;
+    max-width: 80%;
     
 }
 
@@ -42,16 +46,18 @@ a{
     color:#FFF;
 }
 
-.container{
-    max-width: 100%;
+.navcont{
+    display: flex;
+    justify-content: center;
+    width: 100vw;
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
     background-color: #14279B;
-    /*border: solid red 1px;*/
+    border: solid red 1px;
     
 }
-.container img{
+.navcont img{
     display:inline-block;
     align-items: center;
     width: 30px;
@@ -63,7 +69,7 @@ a{
 header{
     background-color: #14279B;
 }
-.container img:hover{
+.contanavcontiner img:hover{
     transform: scale(1.15);
     transition: 0.1s;
     
@@ -72,7 +78,7 @@ nav ul li:hover{
     transform: scale(1.1);
     transition: 0.1s;
 }
-.container .logo img {
+.navcont .logo img {
     transform:scale(1)
 }
 
@@ -429,7 +435,7 @@ footer{
     justify-content: center;
     border: solid black 1px;
     padding-top: 25px;
-    max-width: 100%;
+    max-width: 100vw;
     background-color:#14279B;
     list-style: none;
 
