--- a/Pjesa2/css/style.css
+++ b/Pjesa2/css/style.css
@@ -3,58 +3,33 @@
     padding: 0;
 }
 body{
-    max-width: 100%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     font-family:Century Gothic;
     background-color: rgb(228, 228, 228);
+    overflow-x:hidden;
     
 }
 .hide{
     display:none;
 }
+#no-style{
+    all:none;
+}
 /*---------------------------------------------------------------------*/
-.navbar{
-    display:flex;
-    align-items:center;
-    height: 50px;
-    width: 80%;
-    
-    
-}
-
-nav{
-
-    flex:1;
-    text-align: center;
-    max-width: 80%;
-    
-}
-
-nav ul{
-    display:inline-block;
-    list-style-type:none;
-}
-nav ul li{
-    display:inline-block;
-    margin-right: 80px;
-}
-a{
-    text-decoration:none;
-    color:#FFF;
-}
 
 .navcont{
+    width: inherit;
     display: flex;
     justify-content: center;
-    width: 100vw;
-    margin: auto;
     padding-left: 25px;
     padding-right: 25px;
     background-color: #14279B;
-    border: solid red 1px;
+    /*border: solid 2px red;*/
+    
     
 }
 .navcont img{
@@ -69,7 +44,7 @@ a{
 header{
     background-color: #14279B;
 }
-.contanavcontiner img:hover{
+.navcont img:hover{
     transform: scale(1.15);
     transition: 0.1s;
     
@@ -80,6 +55,36 @@ nav ul li:hover{
 }
 .navcont .logo img {
     transform:scale(1)
+}
+
+.navbar{
+    display:flex;
+    align-items:center;
+    height: 50px;
+    width: 80%;
+    /*border: solid 2px red;*/
+
+    
+}
+
+nav{
+    flex:1;
+    text-align: center;
+    max-width: 80%;
+}
+
+nav ul{
+    display:inline-block;
+    list-style-type:none;
+}
+
+nav ul li{
+    display:inline-block;
+    margin-right: 80px;
+}
+a{
+    text-decoration:none;
+    color:#FFF;
 }
 
 /*SLIDER---------------------------------------------------------------------*/
@@ -128,19 +133,20 @@ main{
     display: flex;
     justify-content:center;
     flex-direction: column;
-    max-width: 90%;
-    /*border: blue 5px solid;*/
+    max-width: 80%;
+    border: blue 5px solid;
     
 }
-.bestseller h2{
+h2{
     text-align: center; 
     border-bottom: 1px solid #14279B; 
     line-height: 0.1em;
     margin: 10px 0 20px; 
     color: #14279B;
+
 }
-.bestseller h2 span {
-    background:#FFF; 
+h2 span {
+    background:rgb(228, 228, 228); 
     padding:0 10px; 
 }
 .productCont{
@@ -239,36 +245,18 @@ main{
 /*COMING SOON-------------------------------------------------------------*/
 .comingMain{
     margin:0 auto;
-    margin-top: 25px;
-    display: flex;
-    justify-content:center;
-    flex-direction: column;
-    max-width: 90%;
-    flex-wrap:wrap;
-    /*border: blue 5px solid;*/
-    
-    
+    width: 80%;
+    border: blue 5px solid;
 }
-.comingMain h2{
-    text-align: center; 
-    border-bottom: 1px solid #14279B; 
-    line-height: 0.1em;
-    margin: 10px 0 20px; 
-    color: #14279B;
-}
-.comingMain h2 span {
-    background:#FFF; 
-    padding:0 10px; 
-}
+
 .comingBlock:hover{
     transform: scale(1.02);
-    transition: 0.5s;
-    
+    transition: 0.5s; 
 }
+
 .comingHead{
     display: flex;
-    /*border: solid red 3px;*/
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap:wrap;
 }
 
@@ -330,13 +318,14 @@ main{
     
     margin: 0 auto;
     margin-top: 35px;
-    max-width: 90%;
     
-   /* border: blue 5px solid;*/
+    width: 80%;
+    
+    border: blue 5px solid;
     
     
    
-}
+}/*
 .reviews h2{
     text-align: center; 
     border-bottom: 1px solid #14279B; 
@@ -347,7 +336,7 @@ main{
 .reviews h2 span {
     background:#FFF; 
     padding:0 10px; 
-}
+}*/
 .reviewsBlock{
     /*border: purple solid 5px;*/
     display: flex;
@@ -390,7 +379,7 @@ main{
 .newsletter{
     
     display: flex;
-    max-width: 100%;
+    max-width: 80%;
     margin:0 auto;
     margin-top: 25px;
     margin-bottom: 25px;
@@ -404,6 +393,10 @@ main{
     justify-content: center;
     padding: 30px; 
     width: 50%;
+}
+.newsText h3{
+    color:#14279B;
+    margin-bottom: 10px;
 }
 
 .newsText p{
@@ -479,7 +472,7 @@ footer ul li{
 
 
 /*------------------------RESPONSIVE------------------------*/
-@media only screen and (min-width:1251px) {
+@media only screen and (min-width:1378px) {
     .navbar .menuIcon{
         width: 28px;
         margin-right:25px;
@@ -487,7 +480,7 @@ footer ul li{
     }
 }
 
-@media only screen and (max-width:1250px) {
+@media only screen and (max-width:1377px) {
     .navbar{
         display:flex;
         align-items:right;
@@ -495,7 +488,7 @@ footer ul li{
     }
     nav ul{
         position: absolute;
-        top:46px;
+        top:50px;
         right: 0;
         background-color: rgba(0, 0, 0, 0.55);
         width: 30%;
@@ -522,5 +515,40 @@ footer ul li{
         cursor: pointer;
     }
 }
+
+/*----------------------*/
+
+.userItems{
+    display:flex;
+    align-items:right;
+    
+}
+.userItems  ul{
+    position: absolute;
+    top:50px;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.55);
+    width: 30%;
+    overflow: hidden;
+    transition: max-height 0.5s;
+    
+}
+.userItems  ul li{
+    display: block;
+    margin:auto 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+
+    
+    
+}
+.userItems  ul li{
+    font-family: Century Gothic;
+    color: #E6E6E6;
+    
+}
+
 
 
