--- a/Pjesa2/css/loginStyle.css
+++ b/Pjesa2/css/loginStyle.css
@@ -52,7 +52,7 @@ form input{
     height:40px;
     border: none;
     border-bottom: solid black 1px;
-    background-color: #FFF;
+    background-color: rgb(228, 228, 228);
     font-size: 20px;
 }
 
@@ -61,7 +61,7 @@ form input{
     height:40px;
     border: none;
     border-bottom: solid black 1px;
-    background-color: #FFF;
+    background-color: rgb(228, 228, 228);
     font-size: 20px;
 
 }
@@ -73,7 +73,7 @@ form input{
     border: none;
     border-bottom: solid #14279B 1px;
     
-    background-color:#FFF;
+    background-color: rgb(228, 228, 228);
     font-size: 20px;
     cursor: pointer;
     color:#14279B;
